--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/utils.css">
+    <link rel="stylesheet" href="styles/normal.css">
     <link rel="stylesheet" href="styles/components/about.css">
     <link rel="stylesheet" href="styles/components/contact.css">
     <link rel="stylesheet" href="styles/components/footer.css">
