--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="./Pics/Kris-logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://api.fontshare.com/v2/css?f[]=general-sans@500,600,400,700&display=swap"
@@ -57,7 +56,7 @@
             </button>
           </li>
           <li>
-            <a class="header__resume btn" href="./pdf/Krisna-Resume.pdf" target="_blank">Resume</a>
+            <a class="header__resume btn" href="./Pdf/TgSanjayResume.pdf" target="_blank">Resume</a>
           </li>
         </ul>
         <button aria-label="mobile nav button" class="header__bars">
@@ -118,8 +117,8 @@
     <main>
       <!--Start of Overview-->
       <section class="hero container">
-        <img class="hero__img" src="./Pics/img-2.jpeg" alt="Profile picture" />
-        <h2 class="hero__subtitle">Hi, I'm Krisna VJ👋</h2>
+        <img class="hero__img" src="./Pics/tgsanjay.jpeg" alt="Profile picture" />
+        <h2 class="hero__subtitle">Hi, I'm TG Sanjay👋</h2>
         <h1 class="hero__title">
           FULL-STACK <br />
           WEB DEVELOPER
@@ -130,7 +129,7 @@
           enthusiast specialized in building stunning pixel-perfect interactive
           websites/applications.
         </p>
-        <a class="hero__btn btn" href="https://www.linkedin.com/in/krisna-vj/" target="_blank">Reach out</a>
+        <a class="hero__btn btn" href="https://www.linkedin.com/in/sanjaytg/" target="_blank">Reach out</a>
       </section>
       <!--End of Overview-->
 
@@ -139,7 +138,7 @@
         <div class="about__content">
           <h2 class="work about__title">About</h2>
           <p class="about__description">
-            Hello there! I'm VJ Krisna,<strong> Engineering Graduate</strong> in Computer Science from College of Engineering Guindy, Chennai.
+            Hello there! I'm TG Sanjay,<strong> Engineering Graduate</strong> in Computer Science from College of Engineering Guindy, Chennai.
             My coding journey began during second year with a fascination for turning lines of code into 
             impactful experiences.
           </p> 
@@ -180,7 +179,7 @@
         <div class="about__img-wrapper">
           <img class="img-border"
             class="about__img lazy loading"
-            src="./Pics/img-1.jpeg"
+            src="./Pics/sanjay.jpeg"
             data-src="./Pics/img-1.jpeg"
             alt="Profile picture"
           />
@@ -280,7 +279,7 @@
       <!--End of Contact me-->
     </main>
     <footer class="footer container section">
-      <h3 class="footer__title">~ Krisna VJ ~</h3>
+      <h3 class="footer__title">~ SANJAY TG ~</h3>
     </footer>
 
     <script src="./src/main.js"></script>
