--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <meta name="description" content="My Portfolio website" />
     <meta name="keywords" content="web design, html, css, js" />
-    <title>Krisna's Portfolio</title>
+    <title>Sanjay's Portfolio</title>
 
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/utils.css">
